search function + viewing profile works

--- a/linkedin workspace/.recommenders/caches/identified-project-coordinates.json
+++ b/linkedin workspace/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"/home/bill/Desktop/linkedin workspace/LinkedInClone","type":"PROJECT","hints":{"PROJECT_NAME":"LinkedInClone"}},"ABSENT"]]
