--- a/linkedin workspace/.recommenders/caches/identified-project-coordinates.json
+++ b/linkedin workspace/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"/home/bill/Desktop/linkedin workspace/libraries/EclipseLink 2.5.2/eclipselink/jlib/jpa/javax.persistence_2.1.0.v201304241213.jar","type":"JAR","hints":{}},"org.eclipse.persistence:javax.persistence:2.0.5"],[{"location":"/home/bill/Desktop/linkedin workspace/LinkedInClone","type":"PROJECT","hints":{"PROJECT_NAME":"LinkedInClone"}},"ABSENT"]]
+[[{"location":"/usr/lib/jvm/java-8-openjdk-amd64","type":"JRE","hints":{}},"jre:jre:1.8.0"]]
