--- a/linkedin workspace/LinkedInClone/.classpath
+++ b/linkedin workspace/LinkedInClone/.classpath
@@ -34,5 +34,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="/home/bill/Downloads/jackson-annotations-2.9.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/bill/Downloads/stax2-api-3.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/bill/Downloads/jackson-module-jaxb-annotations-2.9.7.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
